--- a/css/demo.css
+++ b/css/demo.css
@@ -98,6 +98,18 @@ h1 {
 	background: #3b3b3b; 
 }
 
+#builder .box .buttons {
+	display: none;
+}
+
+#builder .box:hover .buttons {
+	display: block;
+}
+
+#builder .box .buttons button {
+	margin: 15px;
+}
+
 .panel {
 	box-shadow: 0px 1px 2px #aaa;
 }
