--- a/css/demo.css
+++ b/css/demo.css
@@ -66,52 +66,13 @@ h1 {
 }
 
 .panel,
-#builder {
+.boxes {
 	width: 88%;
 	padding: 4%;
 	float: left;
 	margin: 2%;
-}
-
-.box {
-	text-align: center;
-	line-height: 2em;
-}
-
-#builder .box {
-	height: 200px;
-	background: #9b9b9b;
-}
-
-#builder .box span {
-	color: #fff;
-	font-weight: bold;
-	margin-top: 30px;
-	float: left;
-	font-family: helvetica;
-	font-size: 16px;
-	width: 100%;
-	text-shadow: 0px 1px 1px #000;
-}
-
-#builder .box.dark {
-	background: #3b3b3b; 
-}
-
-#builder .box .buttons {
-	display: none;
-}
-
-#builder .box:hover .buttons {
-	display: block;
-}
-
-#builder .box .buttons button {
-	margin: 15px;
-}
-
-.panel {
 	box-shadow: 0px 1px 2px #aaa;
+	font-family: helvetica;
 }
 
 .panel span {
@@ -124,3 +85,19 @@ h1 {
 .panel button {
 	float: left;
 }
+
+.boxes span.box {
+	text-align: center;
+	line-height: 2em;
+}
+
+#builder .boxes .box {
+	height: 200px;
+	background: #aaa;
+}
+
+#builder .boxes .box.dark {
+	background: #3B3B3B;
+}
+
+
