--- a/css/demo.css
+++ b/css/demo.css
@@ -34,20 +34,24 @@ h1 {
 
 .nav,
 .page {
-	width: 100%;
+	width: 95%;
+	padding-left: 5%;
 	float: left;
 	font-family: helvetica;
 	line-height: 2em;
-	cursor: pointer;
 	color: #3B3b3b;
+}
+
+.page {
+	cursor: pointer;
+	font-weight: bold;
 }
 
 .page.selected {
 	color: #0088CC;
-	font-weight: bold;
 }
 
-.nav span:hover {
+.page:hover {
 	background: #eee;
 }
 
@@ -57,9 +61,8 @@ h1 {
 }
 
 .nav .nav span {
-	width: 100%;
-	padding-left: 15%;
-	width: 85%;
+	padding-left: 20%;
+	width: 80%;
 	float: left;
 }
 
