fix tutorial comment

--- a/css/tutorial.css
+++ b/css/tutorial.css
@@ -13,7 +13,20 @@
 	position: fixed; 
 	background: #000; 
 	z-index: 100000; 
-	box-shadow: 0px 0px 3px #000
+	box-shadow: 0px 0px 3px #000;
+}
+
+.mr-comment-container .mr-comment {
+	color: #fff;
+    display: block;
+	padding: 10%;
+	padding-top: 40px;
+	padding-bottom: 20px;
+	text-align: center;
+	width: 80%;
+	font-size: 30px;
+	font-family: helvetica;
+	font-weight: bold;
 }
 
 .mr-arrow {
