--- a/css/demo.css
+++ b/css/demo.css
@@ -169,3 +169,11 @@ h1 {
 	float: right;
 	margin-right: 30px;
 }
+
+.break {
+	float: left;
+	clear: both;
+	width: 100%;
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
