--- a/css/demo.css
+++ b/css/demo.css
@@ -193,3 +193,23 @@ h1 {
 	margin-top: 15px;
 	margin-bottom: 15px;
 }
+
+.slide-item .picture {
+	width: 20%;
+	float: left;
+	margin: 5%;
+	height: 50%;
+}
+
+.slide-item h2 {
+	float: left;
+	width: 70%;
+	margin-top:	8%;
+	font-family: helvetica;
+}
+
+.slide-item span {
+	width: 70%;
+	float: left;
+	font-family: helvetica;
+}
