--- a/css/demo.css
+++ b/css/demo.css
@@ -59,6 +59,11 @@ h1 {
 .nav span {
 	width: 100%;
 	float: left;
+	color: #6b6b6b;
+}
+
+.nav .page.start {
+	color: #3B3b3b;
 }
 
 .nav .nav span {
@@ -68,13 +73,27 @@ h1 {
 }
 
 .nav .nav span {
-	font-size: 14px;
+	color: #6b6b6b;
 }
 
 .nav .nav .page {
-	padding-left: 25%;
-	width: 75%;
+	padding-left: 30%;
+	width: 70%;
 	float: left;
+	color: #3b3b3b;
+	font-size: 13px;
+}
+
+
+.nav .page.start.selected,
+.nav .nav .page.selected {
+	color: #0088CC;
+}
+
+
+.nav .nav .page.selected:hover {
+	background: none;
+	cursor: default;
 }
 
 .panel,
@@ -192,6 +211,11 @@ h1 {
 	width: 100%;
 	margin-top: 15px;
 	margin-bottom: 15px;
+}
+
+.slideshow {
+	width: 92%;
+	margin: 2%;
 }
 
 .slide-item .picture {
