--- a/css/demo.css
+++ b/css/demo.css
@@ -17,6 +17,17 @@ h1 {
     background-size: 32px;
 }
 
+h2,
+h3 {
+	float: left;
+	width: 100%;
+	font-family: helvetica;
+}
+
+input {
+	text-align: center;	
+}
+
 .sidebar {
 	padding: 2%;
 	padding-left: 4%;
@@ -31,7 +42,7 @@ h1 {
 	width: 70%;
 	float: left;
 	min-height: 500px;
-	font-size: 12px;
+	font-size: 13px;
 }
 
 .nav,
@@ -197,12 +208,6 @@ h1 {
 .panel.tutorial button {
 	float: right;
 	margin-right: 30px;
-}
-
-.panel h2,
-.panel h3 {
-	float: left;
-	width: 100%;
 }
 
 .break {
